# docs/swagger.yaml
@@ -370,7 +370,15 @@ definitions:
     type: object
   api.StatusResponse:
     properties:
+      chain_head_updated_at:
+        type: string
+      current_chain_head:
+        type: integer
+      indexer_lag_blocks:
+        type: integer
       indexer_version:
+        type: string
+      last_indexed_at:
         type: string
       last_indexed_block:
         type: integer
@@ -381,6 +389,8 @@ definitions:
       network_name:
         type: string
       uptime:
+        type: string
+      websocket_freshness_at:
         type: string
     type: object
   api.SystemMetrics:
